--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "boilerplate-fullstack-auth",
+  "name": "my-celium",
   "type": "module",
-  "version": "2.0.0",
+  "version": "0.0.1",
   "main": "server/index.js",
   "license": "MIT",
   "keywords": [
@@ -34,14 +34,12 @@
     "jsonwebtoken": "^9.0.2",
     "jwks-rsa": "^2.1.5",
     "knex": "^2.5.1",
+    "phaser": "^3.87.0",
     "sqlite3": "^5.1.6",
     "superagent": "^8.1.2"
   },
   "devDependencies": {
     "@devacademy/eslint-config": "^1.10.1",
-    "@tanstack/eslint-plugin-query": "^5.12.2",
-    "@tanstack/react-query": "^5.12.2",
-    "@tanstack/react-query-devtools": "^5.13.3",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
@@ -50,6 +48,7 @@
     "@types/react-dom": "^18.0.11",
     "@types/superagent": "^8.1.1",
     "@types/supertest": "^6.0.2",
+    "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
     "esbuild": "^0.18.19",
@@ -61,6 +60,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7",
     "jsdom": "^22.1.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.38",
@@ -71,7 +71,8 @@
     "react-router-dom": "^6.11.2",
     "sass": "^1.50.1",
     "supertest": "^6.3.4",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.15",
+    "terser": "^5.28.1",
     "tsx": "^3.12.7",
     "typescript": "^5.3.3",
     "vite": "^5.0.0",
