--- a/package.json
+++ b/package.json
@@ -73,10 +73,13 @@
     "supertest": "^6.3.4",
     "tailwindcss": "^3.4.15",
     "terser": "^5.28.1",
+    "ts-loader": "^9.5.1",
     "tsx": "^3.12.7",
-    "typescript": "^5.3.3",
+    "typescript": "^5.7.2",
     "vite": "^5.0.0",
-    "vitest": "^1.2.0"
+    "vitest": "^1.2.0",
+    "webpack": "^5.96.1",
+    "webpack-cli": "^5.1.4"
   },
   "prettier": {
     "semi": false,
