add game branch formatted code (#35)
* add dynamic sizing for the phaser container

* change the file format to ts

* add buttons placeholders

* add assets

* add grass background

* added basic features

* fixes

* add mushroom images

* add dirt border

* editing fungi

* adding styling

* dirt stuff

* these dirt tiles ain't clickable

* add aliase for client data folder

* format code and change imports

* change files names and remove redundant file

* move to layers folder

* move to layers folder

* move to layers folder

* move nested code to it's own components

* add Inventory UI

* add texture sizing and tilesets

* change scale mode to envelop

* draw grass, dirt, make it zoom and draggable

* update file reference names

* add mushroom classes

* tweak mushroom classes

god i'm so behind on commits

* save

* w

Co-authored-by: Kay the Spooky <kaythesooty@users.noreply.github.com>

* add irish grover font

* add irish grover font

* add sprite pallet

* add code

* add code

* move from classes/ to entities/

* add watering can texture, change texture size on red mushroom to 150x150

* add dirt tile hover and watering on watering state

* connect watering button to wattering login in phaser

* add mushroom planting and destroying

* update version

* add more feature to chest

* add more feature to chest

* remove redundant and old code

* add new assets

* Co-authored-by: Kay the Spooky <kaythesooty@users.noreply.github.com>

* add close chest function

---------

Co-authored-by: faelyn-jpg <169906179+faelyn-jpg@users.noreply.github.com>
Co-authored-by: Lucy Mckenzie <lucymckenzie62@gmail.com>
Co-authored-by: sam <sam.samarasooriya88@gmail.com>
Co-authored-by: Riley Wessel <lessewyendor@gmail.com>
Co-authored-by: Kay the Spooky <kaythesooty@users.noreply.github.com>
Co-authored-by: kodi-dunn-manaia-24 <faelyn-jpg@users.noreply.github.com>
Co-authore

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
       "@assets/*": ["client/assets/*"],
       "@components/*": ["client/components/*"],
       "@context/*": ["client/context/*"],
+      "@data/*": ["client/data/*"],
       "@game/*": ["client/game/*"],
       "@hooks/*": ["client/hooks/*"],
       "@pages/*": ["client/pages/*"],
