--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "@tanstack/react-query": "^5.62.2",
     "express": "^4.17.2",
     "express-jwt": "^7.7.5",
     "howler": "^2.2.4",
