--- a/package.json
+++ b/package.json
@@ -10,14 +10,9 @@
   "scripts": {
     "test": "vitest",
     "start": "node dist/server.js",
-    "dev": "run-p dev:client dev:server",
-    "dev:client": "vite --host",
-    "dev:server": "tsx watch server/index.ts",
-    "build": "run-s build:client build:server",
-    "build:client": "vite build",
-    "build:server": "esbuild --packages=external --platform=node --format=esm --outfile=dist/server.js --bundle server/index.ts",
+    "dev": "vite --host",
+    "build": "vite build",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
-    "knex": "knex --knexfile ./server/db/knexfile.js",
     "format": "prettier -w '**/*.{js,jsx,ts,tsx}'"
   },
   "eslintConfig": {
@@ -27,30 +22,17 @@
     ]
   },
   "dependencies": {
-    "@auth0/auth0-react": "^2.2.4",
-    "@tanstack/react-query": "^5.62.2",
-    "express": "^4.17.2",
-    "express-jwt": "^7.7.5",
     "howler": "^2.2.4",
-    "http-status-codes": "^2.3.0",
-    "jsonwebtoken": "^9.0.2",
-    "jwks-rsa": "^2.1.5",
-    "knex": "^2.5.1",
-    "phaser": "^3.87.0",
-    "sqlite3": "^5.1.6",
-    "superagent": "^8.1.2"
+    "phaser": "^3.87.0"
   },
   "devDependencies": {
     "@devacademy/eslint-config": "^1.10.1",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
-    "@types/express": "^4.17.14",
     "@types/howler": "^2.2.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@types/superagent": "^8.1.1",
-    "@types/supertest": "^6.0.2",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
@@ -65,17 +47,13 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "jsdom": "^22.1.0",
-    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.13",
     "react": "^18.0.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
-    "sass": "^1.50.1",
-    "supertest": "^6.3.4",
     "tailwindcss": "^3.4.15",
-    "terser": "^5.28.1",
     "ts-loader": "^9.5.1",
     "tsx": "^3.12.7",
     "typescript": "^5.7.2",
